# TagLib-Cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  version.h.in
.github/workflows/: build.yml
docs/: audio_metadata_fields.txt  cpp_refactor_rules.txt
src/: actionhandler.cpp  actionhandler.h  common.h  main.cpp  registry.cpp  tagmanager.cpp  tagmanager.h  utils.cpp  utils.h
tests/: README.md  execute_tests.py  render_report.py
